--- a/conf/my.cnf
+++ b/conf/my.cnf
@@ -30,8 +30,8 @@ max_connections         = 1000
 back_log                = 100
 long_query_time         = 1
 slow_query_log          = 1
-slow_query_log_file     = slowqueris.log
-log-error               = error.log
+slow_query_log_file     = /opt/websrv/logs/slowqueris.log
+log-error               = /opt/websrv/logs/error.log
 explicit_defaults_for_timestamp = true
 #log-queries-not-using-indexes
 
