--- a/conf/my.cnf
+++ b/conf/my.cnf
@@ -15,7 +15,7 @@ pid-file            = /opt/websrv/tmp/mysqld.pid
 log-error           = /opt/websrv/logs/error.log
 binlog-format       = mixed
 symbolic-links      = 0
-slow_query_log_file = /opt/websrv/logs/slowqueris.log
+slow-query-log-file = /opt/websrv/logs/slowqueris.log
 
 [server]
 
