--- a/conf/my.cnf
+++ b/conf/my.cnf
@@ -7,6 +7,7 @@ socket      = /opt/websrv/tmp/mysql.sock
 [mysqld]
 federated
 port        = 3306
+datadir     = /opt/websrv/data/mysql
 socket      = /opt/websrv/tmp/mysql.sock
 pid-file    = /opt/websrv/tmp/mysqld.pid
 key-buffer-size         = 64M
@@ -18,7 +19,6 @@ read-buffer-size        = 256K
 read-rnd-buffer-size    = 512K
 myisam-sort-buffer-size = 8M
 thread-cache-size       = 8
-query-cache-size        = 16M
 tmp-table-size          = 100M
 max-heap-table-size     = 100M
 max-connections         = 1000
@@ -38,5 +38,3 @@ quick
 max-allowed-packet = 16M
 
 [mysql]
-no-auto-rehash
-connect-timeout=5
